--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
+alembic==1.4.2
 aniso8601==8.0.0
 atomicwrites==1.3.0
 attrs==19.3.0
 click==7.1.1
 colorama==0.4.3
+coverage==5.1
 Flask==1.1.2
+Flask-Migrate==2.5.3
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.1
 importlib-metadata==1.6.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
+Mako==1.1.2
 MarkupSafe==1.1.1
 more-itertools==8.2.0
 packaging==20.3
@@ -16,6 +20,9 @@ pluggy==0.13.1
 py==1.8.1
 pyparsing==2.4.7
 pytest==5.4.1
+pytest-cov==2.8.1
+python-dateutil==2.8.1
+python-editor==1.0.4
 pytz==2019.3
 six==1.14.0
 SQLAlchemy==1.3.16
