--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ alembic==1.4.2
 aniso8601==8.0.0
 atomicwrites==1.3.0
 attrs==19.3.0
+certifi==2020.4.5.1
+chardet==3.0.4
 click==7.1.1
 colorama==0.4.3
 coverage==5.1
@@ -9,6 +11,8 @@ Flask==1.1.2
 Flask-Migrate==2.5.3
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.1
+flask-swagger-ui==3.25.0
+idna==2.9
 importlib-metadata==1.6.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -21,11 +25,15 @@ py==1.8.1
 pyparsing==2.4.7
 pytest==5.4.1
 pytest-cov==2.8.1
+python-coveralls==2.9.3
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2019.3
+PyYAML==5.3.1
+requests==2.23.0
 six==1.14.0
 SQLAlchemy==1.3.16
+urllib3==1.25.9
 wcwidth==0.1.9
 Werkzeug==1.0.1
 zipp==3.1.0
