--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ pytest==5.4.1
 pytest-cov==2.8.1
 python-coveralls==2.9.3
 python-dateutil==2.8.1
+python-dotenv==0.13.0
 python-editor==1.0.4
 pytz==2019.3
 PyYAML==5.3.1
