--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,21 @@
 language: python
-python:
-  - "3.6"
-  - "3.7"
-  - "3.8"
-  - "3.8-dev"
+jobs:
+  include:
+    - name: "Python 3.8 on Xenial Linux"
+      python: 3.8
+    - name: "Python 3.7 on macOS"
+      osx_image: xcode11.2
+      language: shell
+    - name: "Python 3.8 on Windows"
+      os: windows
+      language: shell
+      before_install:
+        - choco install python --version 3.8.0
+        - python -m pip install --upgrade pip
+      env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
 install:
-  - pip install -r requirements.txt
+  - pip3 install -r requirements.txt
 script:
-  - pytest
+  - pytest --cov=bank_api/ tests/
 after_success:
   - coveralls
