--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: python
+python:
+  - "3.6"
+  - "3.7"
+  - "3.8"
+  - "3.8-dev"
 jobs:
   include:
     - name: "Python 3.8 on Xenial Linux"
